# nlp_starbucks

./: .gitignore  README.md  pyproject.toml  requirements.txt
nlp_starbucks/: api_predict_score.py  review_model.ipynb  review_model.pkl
nlp_starbucks/notebooks/: analise_descritiva.ipynb
notebooks/: data_analysis.ipynb
