[tool.poetry]
name = "nlp-starbucks"
version = "0.1.0"
description = ""
authors = ["Abilio Azevedo <me@abilioazevedo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
spacy = "^3.6.1"
en_core_web_trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.1/en_core_web_trf-3.7.1.tar.gz"}
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.2"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
